# dcc-mcp-openusd

./: .gitignore  CHANGELOG.md  README.md  justfile  pyproject.toml  release-please-config.json
.github/workflows/: ci-release-pr.yml  ci.yml  release.yml
src/dcc_mcp_openusd/: __init__.py  __main__.py  __version__.py  cli.py  runtime.py  server.py
src/dcc_mcp_openusd/skills/: SKILLS_INDEX.md
src/dcc_mcp_openusd/skills/openusd-animation/: SKILL.md  tools.yaml
src/dcc_mcp_openusd/skills/openusd-animation/scripts/: author_attribute_samples.py  author_xform_samples.py  set_time_codes.py
src/dcc_mcp_openusd/skills/openusd-composition/: SKILL.md  tools.yaml
src/dcc_mcp_openusd/skills/openusd-composition/scripts/: add_payload.py  add_sublayer.py  add_variant_set.py  set_variant_selection.py
src/dcc_mcp_openusd/skills/openusd-light-camera/: SKILL.md  tools.yaml
src/dcc_mcp_openusd/skills/openusd-light-camera/scripts/: create_camera.py  create_distant_light.py  create_sphere_light.py  set_transform.py
src/dcc_mcp_openusd/skills/openusd-material/: SKILL.md  tools.yaml
src/dcc_mcp_openusd/skills/openusd-material/scripts/: bind_material.py  create_material.py  create_preview_surface.py
src/dcc_mcp_openusd/skills/openusd-project/: SKILL.md  tools.yaml
src/dcc_mcp_openusd/skills/openusd-project/scripts/: create_project.py  snapshot_stage.py
src/dcc_mcp_openusd/skills/openusd-stage/: SKILL.md  tools.yaml
src/dcc_mcp_openusd/skills/openusd-stage/scripts/: add_reference.py  create_stage.py  define_prim.py  define_xform.py  list_stage.py  set_stage_metadata.py  set_xform_ops.py
src/dcc_mcp_openusd/skills/openusd-validate/: SKILL.md  tools.yaml
src/dcc_mcp_openusd/skills/openusd-validate/scripts/: package_usdz.py  validate_stage.py
src/dcc_mcp_openusd/skills/recipes/: animated-turntable.md  layered-set-dressing.md  lit-product-shot.md
tests/: test_animation.py  test_asset_import.py  test_cli.py  test_composition.py  test_light_camera.py  test_material.py  test_no_pxr_contract.py  test_package_metadata.py  test_runtime.py
tests/e2e/: conftest.py  test_composition_layers.py  test_light_camera.py  test_material_binding.py  test_xform_animation.py
tools/: lint_skills.py
